<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".DetailActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_favourites_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:gravity="center"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toTopOf="@id/scrollDetail_favourites"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.pro.vyas.pranav.popularmovies.extraUtils.AlwaysMarqueeTextView
            android:id="@+id/text_toolbar_title_favourites_detail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/textWhite"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="15dp" />
    </android.support.v7.widget.Toolbar>

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/bottom_navigation_favourites"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/scrollDetail_favourites"
        app:menu="@menu/bottom_menu" />


    <ScrollView
        android:id="@+id/scrollDetail_favourites"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/bottom_navigation_favourites"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_favourites_detail">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/image_backdrop_detail_favourites"
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:scaleType="fitXY"
                app:layout_collapseMode="parallax"
                app:layout_collapseParallaxMultiplier="0.75"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:srcCompat="@drawable/background" />

            <ImageView
                android:id="@+id/image_poster_detail_favourites"
                android:layout_width="175dp"
                android:layout_height="250dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:scaleType="fitXY"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/image_backdrop_detail_favourites"
                app:srcCompat="@color/colorAccent" />

            <com.pro.vyas.pranav.popularmovies.extraUtils.AlwaysMarqueeTextView
                android:id="@+id/text_title_detail_favourites"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/TEXT_TITLE_DETAIL"
                android:textAlignment="center"
                android:textColor="@color/textBlack"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/image_poster_detail_favourites"
                app:layout_constraintTop_toTopOf="@+id/image_poster_detail_favourites" />

            <TextView
                android:id="@+id/tag_release_detail_favourites"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/RELEASE_DATE_DETAIL"
                android:textAlignment="center"
                android:textColor="@color/textDarkBlue"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="@+id/text_title_detail_favourites"
                app:layout_constraintStart_toStartOf="@+id/text_title_detail_favourites"
                app:layout_constraintTop_toBottomOf="@+id/text_title_detail_favourites" />

            <TextView
                android:id="@+id/text_release_detail_favourites"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/DEFAULT_RELEASE_DETAIL"
                android:textAlignment="center"
                android:textColor="@color/textBlack"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="@+id/tag_release_detail_favourites"
                app:layout_constraintStart_toStartOf="@+id/tag_release_detail_favourites"
                app:layout_constraintTop_toBottomOf="@+id/tag_release_detail_favourites" />

            <TextView
                android:id="@+id/tag_synopsis_detail_favourites"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:text="@string/OVERVIEW_DETAIL"
                android:textAlignment="center"
                android:textColor="@color/textDarkBlue"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_rating_detail_favourites" />

            <TextView
                android:id="@+id/tag_genre_detail_favourites"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/GENRE_DETAIL"
                android:textAlignment="center"
                android:textColor="@color/textDarkBlue"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="@+id/text_release_detail_favourites"
                app:layout_constraintStart_toStartOf="@+id/text_release_detail_favourites"
                app:layout_constraintTop_toBottomOf="@+id/text_release_detail_favourites" />

            <TextView
                android:id="@+id/text_genre_detail_favourites"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:text="TextView"
                android:textAlignment="center"
                android:textColor="@color/textBlack"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="@+id/tag_genre_detail_favourites"
                app:layout_constraintStart_toStartOf="@+id/tag_genre_detail_favourites"
                app:layout_constraintTop_toBottomOf="@+id/tag_genre_detail_favourites" />

            <TextView
                android:id="@+id/text_rating_detail_favourites"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="56dp"
                android:background="@drawable/button_rounded"
                android:padding="4dp"
                android:text="@string/IMDB_DETAIL"
                android:textAlignment="center"
                android:textColor="@color/textBlack"
                android:textSize="14sp"
                app:layout_constraintEnd_toStartOf="@+id/text_total_votes_detail_favourites"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/image_poster_detail_favourites" />

            <TextView
                android:id="@+id/text_total_votes_detail_favourites"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:background="@drawable/button_rounded"
                android:padding="4dp"
                android:text="@string/TOTAL_VOTES_DETAIL"
                android:textAlignment="center"
                android:textColor="@color/textBlack"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="@+id/text_rating_detail_favourites"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/text_rating_detail_favourites"
                app:layout_constraintTop_toTopOf="@+id/text_rating_detail_favourites" />

            <TextView
                android:id="@+id/text_synopsis_detail_favourites"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/TEXT_OVERVIEW_DETAIL"
                android:textColor="@color/textBlack"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tag_synopsis_detail_favourites" />

            <view xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/flow_genre_detail_favourites"
                class="com.nex3z.flowlayout.FlowLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:gravity="center"
                app:flChildSpacing="0dp"
                app:flMaxRows="4"
                app:layout_constraintBottom_toTopOf="@+id/text_total_votes_detail_favourites"
                app:layout_constraintEnd_toEndOf="@+id/text_genre_detail_favourites"
                app:layout_constraintStart_toStartOf="@+id/text_genre_detail_favourites"
                app:layout_constraintTop_toBottomOf="@+id/text_genre_detail_favourites">

            </view>

        </android.support.constraint.ConstraintLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>
